create only scratch area

--- a/index.html
+++ b/index.html
@@ -10,27 +10,15 @@ https://github.com/andreruffert/scratchie.js
   </head>
 
   <body>
-    <div class="close-btn">
-      <img src="close.png" width="100%" height="100%"/>
-    </div>
-    <div class="payment-info">
-      <img src="payment-info.png" width="100%" height="100%"/>
-    </div>
-    <div class="card">
-      <img src="card.png" width="100%" height="100%"/>
-    </div>
     <div class="gameplay-container">
-      <div class="engagement-title">
+      <!-- <div class="engagement-title">
         <img src="engagement-title.png" width="100%" height="100%"/>
-      </div>
+      </div> -->
       <div class="container" id="js-container">
         <canvas class="canvas" id="js-canvas" width="279px" height="209px"></canvas>
         <img src="reward-1.png" width="100%" height="100%" id="reward"/>
         <!-- <img src="win.png" width="100%" height="100%" id="win"/> -->
       </div>
-    </div>
-    <div class="utility">
-      <img src="utility.png" width="100%" height="100%"/>
     </div>
     <script>
           
